[tool.poetry]
name = "qbench"
version = "0.2.0"
description = "A handy benchmark tool"
authors = ["WizzyGeek <ojasscoding@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = {version = "^1.25.0", optional = true}
scipy = {version = "^1.10.1", optional = true}

[tool.poetry.dev-dependencies]
mypy = "^1.4.0"

[tool.poetry.extras]
stats = ["numpy", "scipy"]

[[tool.poetry.packages]]
include = "qbench"

[[tool.poetry.include]]
path = "qbench/py.typed"

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
